fix: apprentice images no longer stretch in IE

--- a/source/scss/modules/_person.scss
+++ b/source/scss/modules/_person.scss
@@ -1,5 +1,6 @@
 .person__photo {
   border-radius: 50%;
+  width: 100%;
 }
 h3.person__name {
   margin-top: 0;
